Support Google Analytics
[what]
[why]
[how]
[risk]
Rv:

--- a/config.toml
+++ b/config.toml
@@ -6,7 +6,7 @@ theme = "dream"
 
 # copyright = ""
 
-# googleAnalytics = ""
+googleAnalytics = "UA-195702815-1"
 
 disqusShortname = "garyhsu123"
 
