Commit because I want to change theme.
[what]
[why]
[how]
[risk]
Auditor:

--- a/config.toml
+++ b/config.toml
@@ -27,7 +27,7 @@ disqusShortname = "garyhsu123"
 
   author = "YC"
   # description = ""
-  avatar = "/img/avatar.jpg"
+  avatar = "/img/avatar.png"
   # headerTitle = ""
   motto = "人一能之，己百之，人十能之，己千之，果能此道矣，雖愚必明，雖柔必強"
   # maxTags = 5
